# bevy_web_template

./: .gitignore  LICENSE  README.md  build_rust_src.sh  index.html  package-lock.json  package.json  vite.config.ts
public/: index.css
rust_src/: Cargo.toml
rust_src/src/: game.rs  lib.rs
src/: init.ts  main.ts
