[package]
authors = ["admin <zhaoqian.ipp@bytedance.net>"]
description = ""
edition = "2018"
license = "MIT"
name = "game"
repository = ""
resolver = "2"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = {version = "0.1.6", optional = true}

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = {version = "0.4.5", optional = true}

[dependencies.bevy]
default-features = false
version = "0.9.1"
# These are the remaining default features other than `bevy_audio` and `mp3`
features = [
  "render",
  "bevy_asset",
  "bevy_winit",
  "png",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
debug = 1

[package.metadata]
wasm-opt = false
